# SEwithLLMs

./: .gitignore  Dockerfile  README.md  chat_with_memory.py  compose.yaml  intro.ipynb  intro_tools.ipynb  launch_ollama_cont.sh  prettier_chat.py  pyproject.toml  query_documents.py  query_documents_sandbox.ipynb  simple_refactored_chat.py  simplest_chat.py  streaming_chat.py  streaming_chat_with_memory.py  tool_functions.py
