[project]
name = "sewithllms"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "docarray>=0.41.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.3.2",
    "langchain-text-splitters>=0.3.8",
    "ollama>=0.4.8",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "pip>=25.1",
    "pypdf>=5.4.0",
    "rich>=14.0.0",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
]
